--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@
 </style>
 <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
 <script src="https://code.jquery.com/ui/1.13.0/jquery-ui.js"></script>
+<script src=""https://cdnjs.cloudflare.com/ajax/libs/jqueryui-touch-punch/0.2.3/jquery.ui.touch-punch.min.js"></script>
 <script>
   // Registering Service Worker
   if ('serviceWorker' in navigator) {
