--- a/index.html
+++ b/index.html
@@ -252,9 +252,9 @@ class Tree {
     var liElement = document.createTextNode(item.name);
     if (item.image && item.image !== "No picture"){
       li.style.backgroundImage = 'url(' + item.image + ')';
-      li.style.backgroundSize = 'cover';
+      li.style.backgroundSize = '100% 85%'; //'cover';
       li.style.backgroundRepeat = 'no-repeat';
-      li.style.backgroundPosition = 'center center';    
+      li.style.backgroundPosition = 'center bottom'; //'center center';    
     }
     li.appendChild(liElement);	  
     ul.appendChild(li);
