--- a/index.html
+++ b/index.html
@@ -718,7 +718,7 @@ value: ())
 	<button id="addInteractionBtn" onclick="chooseInterationType()">Add</button>
   </div>
   <div id="backButtonDiv" class="backButtonDiv" style="display:none">
-	<a id="backButton" onclick="onBackButtonClick()">Back</a>
+	<a id="backButton" href="#" onclick="onBackButtonClick()">Back</a>
   </div>
   <div id="record-controls" style="display:none">
     <button id="record" onclick="startRecording()">Record</button>
