--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 
 .breadcrumb-navigation li+li:before {
     padding: 4px;
-    content: " &rarr; ";
+    content: " -> ";
 }
 </style>
 <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
