--- a/index.html
+++ b/index.html
@@ -127,7 +127,8 @@
 
 .breadcrumb-navigation li+li:before {
     padding: 4px;
-    content: " -> ";
+    @charset "UTF-8";
+    content: "&rarr;";
 }
 </style>
 <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
