--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 .breadcrumb-navigation li+li:before {
     padding: 4px;
     @charset "UTF-8";
-    content: "&rarr;";
+    content: "\2192";
 }
 </style>
 <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
