--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@
   //}
 
 .breadcrumb-navigation {
-    padding: 10px 18px;
-    background-color: rgb(238, 238, 238);
+    //padding: 10px 18px;
+    //background-color: rgb(238, 238, 238);
 }
 
 .breadcrumb-navigation>li {
@@ -122,7 +122,7 @@
 
 .breadcrumb-navigation>li>a:hover {
     color: #6fc302;
-    text-decoration: underline;
+    //text-decoration: underline;
 }
 
 .breadcrumb-navigation li+li:before {
