--- a/index.html
+++ b/index.html
@@ -387,9 +387,9 @@ class Tree {
       return breadCrumbs;
     }else if (level > 1){
       breadCrumbs.push(folderItem.name);
-      var parent = tree.find(folderItem.name + (level));
+      var parent = tree.find(folderItem.name + (level-1));
       if (parent && parent.parent){
-        breadCrumbs.append(buildBreadCrumbPath(parent.parent.value, level-1));
+        breadCrumbs.append(buildBreadCrumbPath(parent.parent.value, level-2));
       }
     }
     return breadCrumbs;
