--- a/index.html
+++ b/index.html
@@ -401,6 +401,9 @@ class Tree {
     downloadFile(configJsonStr, 'aac-config.json', 'application/json');
   }
 
+  function importConfig(){
+  }	  
+
   function importDialog(){
     $("#importConfigDialog").dialog("open");
   }
