Moved settings to bottom

--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
     flex: 20%;
     height: 5%;
   }
+  .bottom-right-column {
+    position: absolute;
+    bottom: 10%
+  }
   .top-row {
     display: flex;
   }
@@ -855,7 +859,7 @@ value: ())
   <div  class="top-left-column top-left">
       <a id="back" style="display:none" href="#" onclick="showMainMenu('main-menu')">Back</a>
   </div>
-  <div id="aac-settings-icon" class="top-right-column top-right">
+  <div id="aac-settings-icon" class="bottom-right-column top-right">
       <a href="#" onclick="showSettings()">Settings</a>
   </div>
 </div>  
