--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     -webkit-user-select: none; /* Safari */
     -ms-user-select: none; /* IE 10 and IE 11 */
     user-select: none; /* Standard syntax */
+    overflow-x: hidden;
   }
 	
   /* Create two equal columns that floats next to each other */
