--- a/index.html
+++ b/index.html
@@ -934,7 +934,7 @@ value: ())
 	<ul id="ul-level-1" class="ul-container">
 	</ul>
 </div>
-<div id="aac-settings-icon" class="bottom-right-column top-right">
+<div id="aac-settings-icon" class="">
   <a href="#" onclick="showSettings()">Settings</a>
 </div>
 
