--- a/index.html
+++ b/index.html
@@ -19,9 +19,8 @@
     flex: 20%;
     height: 5%;
   }
-  .bottom-right-column {
-    position: absolute;
-    bottom: 10%
+  .admin-settings {    
+    padding-top: 5%
   }
   .top-row {
     display: flex;
