--- a/index.html
+++ b/index.html
@@ -933,7 +933,7 @@ value: ())
 	<ul id="ul-level-1" class="ul-container">
 	</ul>
 </div>
-<div id="aac-settings-icon" class="">
+<div id="aac-settings-icon" class="admin-settings">
   <a href="#" onclick="showSettings()">Settings</a>
 </div>
 
