--- a/index.html
+++ b/index.html
@@ -955,8 +955,10 @@ value: ())
 		<fieldset>
 			<label for="name">Name</label>
 			<input type="text" name="name" id="name" class="text ui-widget-content ui-corner-all" style="margin-bottom: 20px">
-			<label for="search-name">Search</label>
-			<input type="text" name="search-name" id="search-name" class="text ui-widget-content ui-corner-all" style="margin-bottom: 20px">
+			<div style="display: block">
+			  <label for="search-name">Search</label>
+			  <input type="text" name="search-name" id="search-name" class="text ui-widget-content ui-corner-all" style="margin-bottom: 20px">
+			</div>
 			<div style="display: flex">
 			  <label for="itemPhoto">Picture</label>
 			  <input type="file" id="uploadItemPhoto" style="margin-left: 10px" onchange="displayPicture()"/>
