--- a/index.html
+++ b/index.html
@@ -889,7 +889,7 @@ value: ())
   }
 
   function updateSearchVal(e){
-    document.getElementById("name-search").textContent = e.target.value;
+    document.getElementById("name-search").textContent = e.value;
   }
 </script>
 
