--- a/index.html
+++ b/index.html
@@ -968,6 +968,8 @@ value: ())
 			  <input type="file" id="uploadItemPhoto" style="margin-left: 10px" onchange="displayPicture()"/>
 			</div>
 			<img name="itemPhoto" id="itemPhoto" style="width: 50%; height: 50%; margin-top: 20px; border:0px"/>
+			<label for="left-nav-img-search">Prev</label>
+			<label for="right-nav-img-search">Next</label>
 			<input type="button" name="left-nav-img-search"/>
 			<input type="button" name="right-nav-img-search"/>
 			<!-- Allow form submission with keyboard without duplicating the dialog button -->
