--- a/index.html
+++ b/index.html
@@ -970,8 +970,8 @@ value: ())
 			<img name="itemPhoto" id="itemPhoto" style="width: 50%; height: 50%; margin-top: 20px; border:0px"/>
 			<label for="left-nav-img-search">Prev</label>
 			<label for="right-nav-img-search">Next</label>
-			<input type="button" id="left-nav-img-search"/>
-			<input type="button" id="right-nav-img-search"/>
+			<input type="button" id="left-nav-img-search" value="Prev"/>
+			<input type="button" id="right-nav-img-search" value="Next"/>
 			<!-- Allow form submission with keyboard without duplicating the dialog button -->
 			<input type="submit" tabindex="-1" style="position:absolute; top:-1000px">
 		</fieldset>
