--- a/index.html
+++ b/index.html
@@ -903,7 +903,10 @@ value: ())
   }
 
   function doImgSearch(event){
-    fetch("https://api.pexels.com/v1/search?query=nature&per_page=1")
+    fetch("https://api.pexels.com/v1/search?query=nature&per_page=1", {
+      headers: {
+        "Authorization": "pZCY6KuRGrSRpPbXlovz3Nww5I0eF6x3Dc22X0Cfj2ow0oyljl7AzSAy",
+      })
     .then(response => response.json())
     .then(data => console.log(data)); 
   }
