--- a/index.html
+++ b/index.html
@@ -905,8 +905,9 @@ value: ())
   function doImgSearch(event){
     fetch("https://api.pexels.com/v1/search?query=nature&per_page=1", {
       headers: {
-        "Authorization": "pZCY6KuRGrSRpPbXlovz3Nww5I0eF6x3Dc22X0Cfj2ow0oyljl7AzSAy",
-      })
+        "Authorization": "pZCY6KuRGrSRpPbXlovz3Nww5I0eF6x3Dc22X0Cfj2ow0oyljl7AzSAy"
+      }
+    })
     .then(response => response.json())
     .then(data => console.log(data)); 
   }
