--- a/index.html
+++ b/index.html
@@ -583,8 +583,11 @@ class Tree {
 	saveFromTree();  
   }
 
-  function fetchPicBase64(){
-  	var picUploadPromise;
+  function fetchPicBase64(searchFile){
+  	if (searchFile){
+	  return toBase64(searchFile)
+	}
+	var picUploadPromise;
 	document.querySelector('#uploadItemPhoto').files && Array.from(document.querySelector('#uploadItemPhoto').files).forEach(pictureFile => {
           picUploadPromise = toBase64(pictureFile).then(base64VoiceFile => {
             return base64VoiceFile;
@@ -604,7 +607,7 @@ class Tree {
 	newItem.type = globalSettings.lastAction == InteractionType.Folder ? 'folder' : 'message';
 	  
 	newItem.parent = globalSettings.parentItem && globalSettings.parentItem.name ? globalSettings.parentItem.name : 'root';	
-	return fetchPicBase64().then((picBase64) => {
+	return fetchPicBase64(document.getElementById('itemPhoto') && document.getElementById('itemPhoto').src).then((picBase64) => {
 	  newItem.image = picBase64;	  
 	  var parentLevel = globalSettings.currentLevel - 1;
 	  var parentForTree;
@@ -903,7 +906,7 @@ value: ())
   }
 
   function doImgSearch(event){
-    var apiUrl = "https://api.pexels.com/v1/search?query=" + document.getElementById("search-name").value + "&per_page=1"; 
+    var apiUrl = "https://api.pexels.com/v1/search?query=" + document.getElementById("search-name").value + "&per_page=80"; 
     fetch(apiUrl, {
       headers: {
         "Authorization": "pZCY6KuRGrSRpPbXlovz3Nww5I0eF6x3Dc22X0Cfj2ow0oyljl7AzSAy"
