--- a/index.html
+++ b/index.html
@@ -924,7 +924,7 @@ value: ())
       .then(response => response)
       .then(response => {
 	const response2 = new Response(response.body);
-    	const blob = await response2.blob();
+    	const blob = response2.blob();
         return toBase64(blob).then(base64File => {
 	  image.src = base64File;
 	}); 	
