--- a/index.html
+++ b/index.html
@@ -930,7 +930,7 @@ value: ())
     }); 
   }
   
-  function base64encode(str: string): string {
+  function base64encode(str) {
     return btoa(unescape(encodeURIComponent(str)));
   }	
 </script>
