--- a/index.html
+++ b/index.html
@@ -923,7 +923,7 @@ value: ())
       })
       .then(response => response.text())
       .then(response => {
-        const base64encodedData = base64encode(data);
+        const base64encodedData = base64encode(response);
 	image.src = base64encodedData;	
       })
       console.log(searchRes);
