--- a/index.html
+++ b/index.html
@@ -921,9 +921,9 @@ value: ())
         		"Authorization": "pZCY6KuRGrSRpPbXlovz3Nww5I0eF6x3Dc22X0Cfj2ow0oyljl7AzSAy"
       		}
       })
-      .then(response => response.text())
-      .then(response => {
-        const base64encodedData = base64encode(response);
+      .then(response => toBase64(response.blob()))
+      .then(base64encodedData => {
+        //const base64encodedData = base64encode(response);
 	image.src = 'data:image/jpeg;base64,' +base64encodedData;	
       })
       console.log(searchRes);
