--- a/index.html
+++ b/index.html
@@ -585,7 +585,7 @@ class Tree {
 	
   function fetchPicBase64(imageTagId){
   	if (document.getElementById(imageTagId) && document.getElementById(imageTagId).src && document.getElementById(imageTagId).src.includes("base64")){
-	  return convertToBase64(imageTagId);
+	  return document.getElementById(imageTagId).src;
 	}
 	var picUploadPromise;
 	document.querySelector('#uploadItemPhoto').files && Array.from(document.querySelector('#uploadItemPhoto').files).forEach(pictureFile => {
