--- a/index.html
+++ b/index.html
@@ -905,37 +905,60 @@ value: ())
     document.getElementById("search-name").value = e.value;
   }
 
+  /*
+  ** Image Search functionality
+  */
+  const handle = "pZCY6KuRGrSRpPbXlovz3Nww5I0eF6x3Dc22X0Cfj2ow0oyljl7AzSAy";
+  var fileIndex = 0;
+  var searchResults = [];
+  function fetchNRenderNextImage(){
+    var image = document.getElementById('itemPhoto');
+    fetch(searchResults[fileIndex].src.small , {
+      headers: {
+          "Authorization": handle
+      }
+    })
+    .then((response) => {
+      return response.blob();
+    })	      
+    .then((blob) => {
+      var reader = new FileReader();
+      reader.readAsDataURL(blob); 
+      reader.onloadend = function() {
+        var base64data = reader.result;              
+        console.log(base64data);
+	image.src = base64data;	
+      }	
+    });  
+  }
+
   function doImgSearch(event){
     var apiUrl = "https://api.pexels.com/v1/search?query=" + document.getElementById("search-name").value + "&per_page=80"; 
     fetch(apiUrl, {
       headers: {
-        "Authorization": "pZCY6KuRGrSRpPbXlovz3Nww5I0eF6x3Dc22X0Cfj2ow0oyljl7AzSAy"
+        "Authorization": handle
       }
     })
     .then(response => response.json())
     .then(searchRes => {
-      var image = document.getElementById('itemPhoto');
-      //image.src = searchRes.photos.length > 0 && searchRes.photos[0].src.small;
-      fetch(searchRes.photos[0].src.small , {
-   	headers: {
-          "Authorization": "pZCY6KuRGrSRpPbXlovz3Nww5I0eF6x3Dc22X0Cfj2ow0oyljl7AzSAy"
-      	}
-      })
-      .then((response) => {
-	return response.blob();
-      })	      
-      .then((blob) => {
-        var reader = new FileReader();
-          reader.readAsDataURL(blob); 
-          reader.onloadend = function() {
-            var base64data = reader.result;              
-            console.log(base64data);
-	    image.src = base64data;	
-          }	
-      })
-      console.log(searchRes);
+      searchResults = searchRes.photos;
+      fetchNRenderNextImage();
     }); 
-  }  
+  }
+
+  function fetchPrev(){
+    if (fileIndex > 0){
+      fileIndex = fileIndex - 1;
+      fetchNRenderNextImage();
+    }
+  }
+
+  function fetchNext(){
+    if (fileIndex < 79){
+      fileIndex = fileIndex + 1;
+      fetchNRenderNextImage();
+    }
+  }
 </script>
 
 <div class="top-row prevent-select">
@@ -1013,8 +1036,8 @@ value: ())
 			  <input type="file" id="uploadItemPhoto" style="margin-left: 10px" onchange="displayPicture()"/>
 			</div>
 			<img name="itemPhoto" id="itemPhoto" style="width: 50%; height: 50%; margin-top: 20px; border:0px"/>			
-			<input type="button" id="left-nav-img-search" value="Prev"/>
-			<input type="button" id="right-nav-img-search" value="Next"/>
+			<input type="button" id="left-nav-img-search" value="Prev" onlick="fetchPrev()"/>
+			<input type="button" id="right-nav-img-search" value="Next" onlick="fetchNext()"/>
 			<!-- Allow form submission with keyboard without duplicating the dialog button -->
 			<input type="submit" tabindex="-1" style="position:absolute; top:-1000px">
 		</fieldset>
