--- a/index.html
+++ b/index.html
@@ -1036,8 +1036,8 @@ value: ())
 			  <input type="file" id="uploadItemPhoto" style="margin-left: 10px" onchange="displayPicture()"/>
 			</div>
 			<img name="itemPhoto" id="itemPhoto" style="width: 50%; height: 50%; margin-top: 20px; border:0px"/>			
-			<input type="button" id="left-nav-img-search" value="Prev" onlick="fetchPrev()"/>
-			<input type="button" id="right-nav-img-search" value="Next" onlick="fetchNext()"/>
+			<input type="button" id="left-nav-img-search" value="Prev" onclick="fetchPrev()"/>
+			<input type="button" id="right-nav-img-search" value="Next" onclick="fetchNext()"/>
 			<!-- Allow form submission with keyboard without duplicating the dialog button -->
 			<input type="submit" tabindex="-1" style="position:absolute; top:-1000px">
 		</fieldset>
