--- a/index.html
+++ b/index.html
@@ -913,7 +913,7 @@ value: ())
   var searchResults = [];
   function fetchNRenderNextImage(){
     var image = document.getElementById('itemPhoto');
-    fetch(searchResults[fileIndex].src.small , {
+    fetch(searchResults[fileIndex].src.medium , {
       headers: {
           "Authorization": handle
       }
