--- a/index.html
+++ b/index.html
@@ -389,13 +389,13 @@ class Tree {
   function createItemLi(item){
     var li = document.createElement("li");
     li.setAttribute("id", "li" + item.name);
-    li.addEventListener('click', function() {
-      handleItemClick(li, item);
+    li.addEventListener('click', function(event) {
+      handleItemClick(li, item, event);
     });
     return li;
   }
   
-  function handleItemClick(liElement, item){
+  function handleItemClick(liElement, item, event){
 	//Reset previous clicks on Settings
 	globalSettings.settingsClickCount = 0;
 	if(item.type && item.type == 'folder'){
@@ -406,7 +406,7 @@ class Tree {
 	}
 	globalSettings.currentItem = item;
     if (globalSettings && globalSettings.adminMode){
-      handleItemEdit(liElement);
+      handleItemEdit(liElement, event);
     }else{
       promptItem(liElement.innerText);
 	  if (item.type && item.type === 'folder'){
@@ -548,13 +548,13 @@ class Tree {
     }
   }
   
-  function handleItemEdit(liElement){
+  function handleItemEdit(liElement, event){
     if (globalSettings) {
       globalSettings.currentItemLiEle = liElement;
     }
     document.getElementById("item-edit-menu").style.display="block";
     var rect = liElement.getBoundingClientRect();
-    $("#item-edit-menu").menu({"position" : { of: liElement}});
+    $("#item-edit-menu").menu({"position" : { of: event}});
   }
   
   function editItemContents(){
