--- a/index.html
+++ b/index.html
@@ -553,7 +553,7 @@ class Tree {
       globalSettings.currentItemLiEle = liElement;
     }    
     var rect = liElement.getBoundingClientRect();
-    $("#item-edit-menu").menu().position({ of: event});
+    $("#item-edit-menu").menu().position({my: "right top", at: "right bottom", of: event});
     document.getElementById("item-edit-menu").style.display="block";
   }
   
