--- a/index.html
+++ b/index.html
@@ -553,8 +553,8 @@ class Tree {
       globalSettings.currentItemLiEle = liElement;
     }    
     var rect = liElement.getBoundingClientRect();
-    $("#item-edit-menu").menu().position({my: "right top", at: "right bottom", of: liElement, collision: "none"});
-    document.getElementById("item-edit-menu").style.display="block";
+    $("#item-edit-menu").menu().position({my: "left top", at: "right bottom", of: liElement}).show();
+    //document.getElementById("item-edit-menu").style.display="block";
   }
   
   function editItemContents(){
